examples/sample-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-nginx-service
  namespace: default
  labels:
    app: sample-nginx-app
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: sample-nginx-app
